# IndraOS

./: .gitignore  DirectoryTreeExplorer.py  GEMINI.md  README.md
backend/: README.md  __init__.py  base de donnee.html  config.env  main.py  pyproject.toml  requirements.txt  run.py  start.ps1  test_setup.py
backend/api/endpoints/: ai_analysis.py  auth.py  system.py
backend/api/schemas/: __init__.py  ai_analysis.py  system.py  user.py
backend/core/: config.py
backend/db/: __init__.py
backend/models/: __init__.py  system.py  user.py
backend/services/: __init__.py  ai_service.py  network_service.py  process_service.py  security_service.py  service_service.py  system_service.py  user_service.py
docs/: Feuille de Route.md  Présentation Projet IndraOS.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ai-analysis/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/logs/: page.tsx
frontend/app/network/: page.tsx
frontend/app/performance/: page.tsx
frontend/app/processes/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/security/: page.tsx
frontend/app/services/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/system/: page.tsx
frontend/components/charts/: PerformanceChart.tsx
frontend/components/dashboard/: AIInsightsPanel.tsx  BackendStatus.tsx  MetricCard.tsx  QuickActions.tsx  SystemHealth.tsx  SystemOverview.tsx
frontend/components/layout/: Header.tsx  Sidebar.tsx
frontend/components/providers/: WebSocketProvider.tsx
frontend/hooks/: useWebSocket.ts
frontend/lib/: api.ts  constants.ts  websocket.ts
frontend/store/: useSystemStore.ts
frontend/types/: system.ts
